2005-09-27  Raja R Harinath  <rharinath@novell.com>

	* configure.in (BUILD_MCS): New automake conditional.  Used to
	disable building the mcs/ tree if cross-compiling.
	($mcsdir/build/config.make): Don't clobber if we're cross-compiling.
	* runtime/Makefile.am (all-local, install, uninstall, clean-local):
	Disable building in the mcs/ tree if !BUILD_MCS.

2005-09-22  Raja R Harinath  <rharinath@novell.com>

	* configure.in (MONO_VERSION): Emit it into config.make.  Don't
	build Consts.cs.

2005-09-19  Zoltan Varga  <vargaz@gmail.com>

	* docs/exception-handling.txt: Add section about libunwind.
	
	* docs/exception-handling.txt: New file.

2005-09-16  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (all-local, install-exec, uninstall)
	(mcs-do-test-profiles, mcs-do-run-test-profiles, mcs-compileall):
	Don't call semdel-wrapper.

2005-09-06  Chris Toshok  <toshok@ximian.com>

	* data/browscap.ini: Add the ecmascriptversion/w3cdomversion
	attributes required for ASP.Net client side validation to the
	capabilities for Mozilla 1.[78], IE 5.5 & 6.0, Safari, and Firefox
	0.9 & 1.0 browsers.

2005-08-26  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add ability to cross-compile from linux to win32.

2005-08-26  Kornél Pál  <kornelpal@hotmail.com>

	* configure.in: Generating Consts.cs from Consts.cs.in instead of MonoVersion.cs.

2005-08-25  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Use CC instead of gcc for __thread tests.

2005-08-25  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Pass --enable-win32-dllmain to libgc configure. Build the runtime as a dll under windows.

2005-08-24  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add -lunwind to ldflags on IA64.

2005-08-22  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Patch libtool to get rid of 'cyg' prefixes in library names.

2005-08-11  Zoltan Varga  <vargaz@freemail.hu>

	* libmono.vcproj: Fix VC build.

Thu Aug 4 19:55:33 BST 2005 Paolo Molaro <lupus@ximian.com>
